# Aegisub

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindASS.cmake  FindFFMS2.cmake  FindFFTW.cmake  FindHunspell.cmake  FindLuaJIT.cmake  FindUchardet.cmake  LuaJITCheck52.cc  ass.cmake  boost.cmake  iconv.cmake  icu.cmake  luajit.cmake  wxWidgets.cmake
libaegisub/: CMakeLists.txt  lagi_pre.h
src/: CMakeLists.txt  agi_pre.h  subs_edit_box.cpp  subs_edit_ctrl.cpp
src/libresrc/: CMakeLists.txt
src/osx/: retina_helper.mm
